Compile Kotlin in memory on the 2.4.20 phased pipeline
Kotlin 2.4.20 deletes the legacy K2 CLI pipeline Kompile.kt compiled through,
along with KotlinToJVMBytecodeCompiler, MinimizedFrontendContext and the rest
of cli.jvm.compiler.legacy.pipeline. There is nothing to import in its place,
so compilation is now composed out of the phased pipeline that replaced it.

The frontend phase cannot be called as a phase, because it collects its sources
by walking source roots through the local filesystem. Its pieces are public, so
the project environment, the library list and the sessions are built here the
way that phase builds them, and the fir2ir and backend phases are then called
directly with the public artifact types. Sources go in as in-memory text
through the light tree rather than as PSI files, which is the compiler's own
default and the only mode the backend phase accepts for them.

Calling the phases directly skips their pre- and post-actions, which is
deliberate: the error check among them throws PipelineStepException, and jeed
wants a CompilationFailed carrying its own messages. So the two checks that
matter are made explicitly, after parsing and after fir2ir. Nothing on the path
opens a file for writing, since the phase that writes class files is never
invoked, and a test now pins that: a recording SecurityManager fails on any
write or delete from the compiling thread.

Two behaviour changes came with it, one of them a fix.

Top-level declarations in a source whose name carries a directory now land in
the class kotlinc puts them in. com/example/Util.kt produces com.example.UtilKt
where jeed used to produce com.example.Com_example_UtilKt, because it handed
the compiler the whole source name as the file's name, a field that for a file
on disk only ever holds the last segment. Stock kotlinc emits UtilKt on 2.4.10
and 2.4.20 alike, so this is jeed catching up rather than the compiler moving.
Two sources sharing a last segment and declaring no package now collide exac